let it work without error nowatime
twitter stream url has apparently changed, but twitter module is not up-to-date.
 -> give it the right url at creating.
 -> added the deep-extend - module to do it a fine way.

removed the debug-setting for stream.io, it only throws warnings now.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "twitter": "latest",
     "irc": "latest",
     "underscore": "latest",
-    "node-html-encoder": "latest"
+    "node-html-encoder": "latest",
+    "deep-extend": "latest"
   }
 }
