--- a/config.js.example
+++ b/config.js.example
@@ -7,6 +7,7 @@ var config = {
       access_token_key: 'xxx',
       access_token_secret: 'xxx'
     },
+    whitelist: '/foo/bar/whitelist.json',
     track: '#gnomus,#foo'
   },
   irc: {
